...
                // if no user, then we'll need to add a new user with details
                try? storageProvider.addUserWithUsername(username, andLoginToken: loginToken)
                // fetch the added user
                user = try? storageProvider.fetchUserWithUsername(username)
            }
            
            self.alertText = "Login Successful"
            
        } catch {
            
            switch error {
            case LoginError.invalidUsername(let description),
                LoginError.invalidPassword(let description):
...
